welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:2: error: value % is not a member of Nothing
  if (noDoubles && die1==die2) {(return die1+die2)%6}
                                                  ^